bone collections don't shows that are controlled by a driver #120278

Closed
opened 2024-04-05 00:17:55 +02:00 by Ayoub ibn Muhammad · 6 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.86

Blender Version
Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: 40a5e739e270
Worked:

Short description of error
if the visibility or the solo props of the bone collections are being controlled by a driver, that does not show up in the interface with the purple color.

Exact steps for others to reproduce the error
in the demo file, I added some custom props to show the problem!

Capture.jpg

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.86 **Blender Version** Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: `40a5e739e270` Worked: **Short description of error** if the visibility or the solo props of the bone collections are being controlled by a driver, that does not show up in the interface with the purple color. **Exact steps for others to reproduce the error** in the demo file, I added some custom props to show the problem! ![Capture.jpg](/attachments/5c15674c-222b-45b7-a7bc-3e0f983ce621)
Ayoub ibn Muhammad added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-04-05 00:17:55 +02:00
Member

Can confirm. Doesn't seem to be a theme issue. Keyframe color also isn't shown on this eye button. Likely just that the background color isn't drawn on this uiBut.

Can confirm. Doesn't seem to be a theme issue. Keyframe color also isn't shown on this eye button. Likely just that the background color isn't drawn on this uiBut.
YimingWu added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-04-05 06:58:01 +02:00
Member

Not sure how this is done in UIList. But for tree-view do we need to change backgrounnd color in build_layer_buttons?

Not sure how this is done in UIList. But for tree-view do we need to change backgrounnd color in `build_layer_buttons`?

This is strange, at I remember testing this while developing and it used to work. I'll dive into it.

This is strange, at I remember testing this while developing and it used to work. I'll dive into it.
Sybren A. Stüvel added the
Interest
Animation & Rigging
label 2024-04-05 11:37:19 +02:00

Hmmm the last old branch I had also doesn't show drivers properly, so maybe I'm mistaken.

Not sure how this is done in UIList. But for tree-view do we need to change backgrounnd color in build_layer_buttons?

I would expect uiItemR() to take care of this for us, but I'm rather unfamiliar with the C UI code.

For reference: there is no build_layer_buttons() in the Bone Collection Tree code, BoneCollectionItem::build_row() is the place to be.

So yeah, I think that assigning this to the UI module is the right way to go.

Hmmm the last old branch I had also doesn't show drivers properly, so maybe I'm mistaken. > Not sure how this is done in UIList. But for tree-view do we need to change backgrounnd color in `build_layer_buttons`? I would expect `uiItemR()` to take care of this for us, but I'm rather unfamiliar with the C UI code. For reference: there is no `build_layer_buttons()` in the Bone Collection Tree code, `BoneCollectionItem::build_row()` is the place to be. So yeah, I think that assigning this to the UI module is the right way to go.
Member

For reference: there is no build_layer_buttons() in the Bone Collection

Sorry, I mostly refer GPv3 layer when it comes to tree-view 😅
I was looking at the widget_color_blend_from_flags: After adding driver to tree-view element, condition for UI_BUT_DRIVEN is not hit but it does hit for UIList and other UI properties.

Other UI devs know better about the structure and working.

Checking further

> For reference: there is no build_layer_buttons() in the Bone Collection Sorry, I mostly refer GPv3 layer when it comes to tree-view 😅 I was looking at the `widget_color_blend_from_flags`: After adding driver to tree-view element, condition for `UI_BUT_DRIVEN` is not hit but it does hit for UIList and other UI properties. Other UI devs know better about the structure and working. Checking further
Member

Following change resolves this:

diff --git a/source/blender/editors/interface/views/tree_view.cc b/source/blender/editors/interface/views/tree_view.cc
index 3ead9a5ee78..b8084f3d924 100644
--- a/source/blender/editors/interface/views/tree_view.cc
+++ b/source/blender/editors/interface/views/tree_view.cc
@@ -660,7 +660,7 @@ void TreeViewLayoutBuilder::build_row(AbstractTreeViewItem &item) const
   item.add_treerow_button(block_);

   /* After adding tree-row button (would disable hover highlighting). */
-  UI_block_emboss_set(&block_, UI_EMBOSS_NONE);
+  UI_block_emboss_set(&block_, UI_EMBOSS_NONE_OR_STATUS);

   row = uiLayoutRow(overlap, true);
   item.add_indent(*row);
Following change resolves this: ```diff diff --git a/source/blender/editors/interface/views/tree_view.cc b/source/blender/editors/interface/views/tree_view.cc index 3ead9a5ee78..b8084f3d924 100644 --- a/source/blender/editors/interface/views/tree_view.cc +++ b/source/blender/editors/interface/views/tree_view.cc @@ -660,7 +660,7 @@ void TreeViewLayoutBuilder::build_row(AbstractTreeViewItem &item) const item.add_treerow_button(block_); /* After adding tree-row button (would disable hover highlighting). */ - UI_block_emboss_set(&block_, UI_EMBOSS_NONE); + UI_block_emboss_set(&block_, UI_EMBOSS_NONE_OR_STATUS); row = uiLayoutRow(overlap, true); item.add_indent(*row); ```
Pratik Borhade self-assigned this 2024-04-05 12:45:14 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-05 16:13:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120278
No description provided.